@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Moved botinfo to State::IRC.
     * Added hook on_selfkick for when we are kicked from a channel.
     * Moved chanusers to State::IRC.
     * Created State::IRC.
